; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform-windows.c_os_rename.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform-windows.c_os_rename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MOVEFILE_REPLACE_EXISTING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @os_rename(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* null, i32** %6, align 8
  store i32* null, i32** %7, align 8
  store i32 -1, i32* %8, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = call i32 @os_utf8_to_wcs_ptr(i8* %9, i32 0, i32** %6)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %32

13:                                               ; preds = %2
  %14 = load i8*, i8** %5, align 8
  %15 = call i32 @os_utf8_to_wcs_ptr(i8* %14, i32 0, i32** %7)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %13
  br label %26

18:                                               ; preds = %13
  %19 = load i32*, i32** %6, align 8
  %20 = load i32*, i32** %7, align 8
  %21 = load i32, i32* @MOVEFILE_REPLACE_EXISTING, align 4
  %22 = call i64 @MoveFileExW(i32* %19, i32* %20, i32 %21)
  %23 = icmp ne i64 %22, 0
  %24 = zext i1 %23 to i64
  %25 = select i1 %23, i32 0, i32 -1
  store i32 %25, i32* %8, align 4
  br label %26

26:                                               ; preds = %18, %17
  %27 = load i32*, i32** %6, align 8
  %28 = call i32 @bfree(i32* %27)
  %29 = load i32*, i32** %7, align 8
  %30 = call i32 @bfree(i32* %29)
  %31 = load i32, i32* %8, align 4
  store i32 %31, i32* %3, align 4
  br label %32

32:                                               ; preds = %26, %12
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i32 @os_utf8_to_wcs_ptr(i8*, i32, i32**) #1

declare dso_local i64 @MoveFileExW(i32*, i32*, i32) #1

declare dso_local i32 @bfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
